MLH added, fix scrollbar color, tailwind and vue deprecated fix

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -16,7 +16,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #9092FF;
+  background-color: #183717;
   width: 0.4rem;
   border-radius: 1rem;
 }
